added circle/ci sample configs, updated docs, swagger, setup file
